--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="GLFWWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Matrix3.hpp">
@@ -196,6 +199,9 @@
     </ClInclude>
     <ClInclude Include="GLFWWindow.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.hpp">
+      <Filter>Header Files\Math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
