--- a/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -43,6 +43,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EngineQScripting\EngineQScripting.csproj">
+      <Project>{9928f89e-bae3-48b4-9ee4-10ea062e540d}</Project>
+      <Name>EngineQScripting</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
