--- a/EngineQ/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/EngineQScripting/EngineQScripting.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Scene.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
