--- a/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CameraMoveClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RotateTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineQScripting\EngineQScripting.csproj">
